Git_WGBH_QC/src/objects/TaPayment__c.object
<CustomObject>
    <description>Temporary Payment Object for closing Opportunities that were migrated from TA</description>
    <fields>
        <fullName>Recurring_Donation__c</fullName>
        <label>Recurring Donation</label>
        <referenceTo>Recurring_Donation__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaTransactions_Id__c</fullName>
        <description>TA Transactions external Id</description>
        <externalId>true</externalId>
        <label>TA Transactions Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>activity_type__c</fullName>
        <description>Activity Type</description>
        <inlineHelpText>Activity Type</inlineHelpText>
        <label>Activity Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adj_adjustment_seq__c</fullName>
        <description>Adj Adjustment Seq</description>
        <inlineHelpText>Adj Adjustment Seq</inlineHelpText>
        <label>Adj Adjustment Seq</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adj_gift_date__c</fullName>
        <description>Adj Gift Date</description>
        <inlineHelpText>Adj Gift Date</inlineHelpText>
        <label>Adj Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>adj_gift_seq__c</fullName>
        <description>Adj Gift Seq</description>
        <inlineHelpText>Adj Gift Seq</inlineHelpText>
        <label>Adj Gift Seq</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>adjustment_code_value__c</fullName>
        <description>Adjustment Code</description>
        <inlineHelpText>Adjustment Code</inlineHelpText>
        <label>Adjustment Code Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>batch_process_count__c</fullName>
        <description>This field is used for Apex batch processing for post processing ETL information</description>
        <label>Batch Process Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bulk_load__c</fullName>
        <defaultValue>false</defaultValue>
        <label>bulk load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>campaign__c</fullName>
        <label>Campaign Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>check_name__c</fullName>
        <description>Check Name</description>
        <inlineHelpText>Check Name</inlineHelpText>
        <label>Check Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>commitment_date__c</fullName>
        <description>Commitment Date</description>
        <inlineHelpText>Commitment Date</inlineHelpText>
        <label>Commitment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fiscal_month__c</fullName>
        <description>Fiscal Month</description>
        <inlineHelpText>Fiscal Month</inlineHelpText>
        <label>Fiscal Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fiscal_year__c</fullName>
        <description>Fiscal Year</description>
        <inlineHelpText>Fiscal Year</inlineHelpText>
        <label>Fiscal Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gift_date__c</fullName>
        <description>Gift Date</description>
        <inlineHelpText>Gift Date</inlineHelpText>
        <label>Gift Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gift_kind__c</fullName>
        <description>Gift Kind</description>
        <inlineHelpText>Gift Kind</inlineHelpText>
        <label>Gift Kind Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gift_seq__c</fullName>
        <description>Gift Seq</description>
        <inlineHelpText>Gift Seq</inlineHelpText>
        <label>Gift Seq</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gift_type__c</fullName>
        <description>Gift Type</description>
        <inlineHelpText>Gift Type</inlineHelpText>
        <label>Gift Type Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>installment_amount__c</fullName>
        <description>Installment Amount</description>
        <inlineHelpText>Installment Amount</inlineHelpText>
        <label>Installment Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>last_payment_date__c</fullName>
        <description>Last Payment Date</description>
        <inlineHelpText>Last Payment Date</inlineHelpText>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>name_id__c</fullName>
        <description>Name Id</description>
        <inlineHelpText>Name Id</inlineHelpText>
        <label>Name Id</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>paid_amount__c</fullName>
        <description>Paid Amount</description>
        <inlineHelpText>Paid Amount</inlineHelpText>
        <label>Paid Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>payment_amount__c</fullName>
        <description>Payment Amount</description>
        <inlineHelpText>Payment Amount</inlineHelpText>
        <label>Payment Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>payment_frequency__c</fullName>
        <description>Payment Frequency</description>
        <inlineHelpText>Payment Frequency</inlineHelpText>
        <label>Payment Frequency Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>payment_method__c</fullName>
        <description>Payment Method</description>
        <inlineHelpText>Payment Method</inlineHelpText>
        <label>Payment Method Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>payments_in_schedule__c</fullName>
        <description>Payments In Schedule</description>
        <inlineHelpText>Payments In Schedule</inlineHelpText>
        <label>Payments In Schedule</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pledge_number__c</fullName>
        <description>Pledge Number</description>
        <inlineHelpText>Pledge Number</inlineHelpText>
        <label>Pledge Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pledge_time__c</fullName>
        <description>Pledge Time</description>
        <inlineHelpText>Pledge Time</inlineHelpText>
        <label>Pledge Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>processed_date__c</fullName>
        <description>Processed Date</description>
        <inlineHelpText>Processed Date</inlineHelpText>
        <label>Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>recognition_date__c</fullName>
        <description>Recognition Date</description>
        <inlineHelpText>Recognition Date</inlineHelpText>
        <label>Recognition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>schedule_start_date__c</fullName>
        <description>Schedule Start Date</description>
        <inlineHelpText>Schedule Start Date</inlineHelpText>
        <label>Schedule Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>soft_credit_type__c</fullName>
        <description>Soft Credit Type</description>
        <inlineHelpText>Soft Credit Type</inlineHelpText>
        <label>Soft Credit Type Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>staff__c</fullName>
        <label>Staff</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sts__c</fullName>
        <label>Sts</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sustaining_gift_number__c</fullName>
        <description>Sustaining Gift Number</description>
        <inlineHelpText>Sustaining Gift Number</inlineHelpText>
        <label>Sustaining Gift Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>transaction_type_value__c</fullName>
        <description>Transaction Type</description>
        <inlineHelpText>Transaction Type</inlineHelpText>
        <label>Transaction Type Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>TaPayment Temporary</label>
    <nameField>
        <label>Temp Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaPayments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>